--- a/index.html
+++ b/index.html
@@ -173,14 +173,19 @@
                 <img src="images/Miller-Logo.png" alt="Jack Miller State House" class="logo-img">
             </a>
 
-            <!-- Controls: right after the logo -->
-            <div class="nav-controls">
-                <a href="" target="_blank" class="btn-donate">Donate</a>
-                <a href="Facebook.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Facebook"><i
-                        class="fab fa-facebook-f"></i></a>
-                <a href="Instagram.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Instagram"><i
-                        class="fab fa-instagram"></i></a>
-            </div>
+<div class="nav-controls">
+    <a href="https://secure.anedot.com/jack-miller/donate" target="_blank" class="btn-donate">
+        Donate
+    </a>
+
+    <a href="https://www.facebook.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Facebook">
+        <i class="fab fa-facebook-f"></i>
+    </a>
+
+    <a href="https://www.instagram.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+    </a>
+</div>
 
         </div>
 
@@ -215,5 +220,6 @@
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
