--- a/index.html
+++ b/index.html
@@ -34,13 +34,19 @@
             </a>
 
             <!-- Controls: right after the logo -->
-            <div class="nav-controls">
-                <a href="" target="_blank" class="btn-donate">Donate</a>
-                <a href="Facebook.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Facebook"><i
-                        class="fab fa-facebook-f"></i></a>
-                <a href="Instagram.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Instagram"><i
-                        class="fab fa-instagram"></i></a>
-            </div>
+<div class="nav-controls">
+    <a href="https://secure.anedot.com/jack-miller/donate" target="_blank" class="btn-donate">
+        Donate
+    </a>
+
+    <a href="https://www.facebook.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Facebook">
+        <i class="fab fa-facebook-f"></i>
+    </a>
+
+    <a href="https://www.instagram.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+    </a>
+</div>
 
         </div>
     </nav>
@@ -223,3 +229,4 @@
 
 
 </html>
+
