--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <!-- Controls: right after the logo -->
 <div class="nav-controls">
-    <a href="https://secure.anedot.com/jack-miller/donate" target="_blank" class="btn-donate">
+    <a href="" target="_blank" class="btn-donate">
         Donate
     </a>
 
@@ -180,7 +180,7 @@
             </a>
 
 <div class="nav-controls">
-    <a href="https://secure.anedot.com/jack-miller/donate" target="_blank" class="btn-donate">
+    <a href="" target="_blank" class="btn-donate">
         Donate
     </a>
 
@@ -229,4 +229,5 @@
 
 
 </html>
+
 
