--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
             <div class="issue-item">
                 <i class="fas fa-circle-check issue-icon"></i>
-                <p class="issue-text">Keep zoning decisions in the hands of local officials</p>
+                <p class="issue-text">Protect our communities from overdevelopment and keep zoning decisions in the hands of our local officials.</p>
             </div>
 
             <div class="issue-item">
@@ -229,5 +229,6 @@
 
 
 </html>
+
 
 
