--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
             <div class="issue-item">
                 <i class="fas fa-circle-check issue-icon"></i>
-                <p class="issue-text">Protect our communities from overdevelopment and keep zoning decisions in the hands of our local officials.</p>
+                <p class="issue-text">Protect our communities from overdevelopment and keep zoning decisions in the hands of our local officials</p>
             </div>
 
             <div class="issue-item">
@@ -195,7 +195,7 @@
 
         </div>
 
-        <p class="text-center text-muted m-2 mb-2">Paid for by Jack Miller for State House</p>
+        <p class="text-center text-muted m-2 mb-2">Paid for by Friends of Jack Miller</p>
     </footer>
 
 
@@ -229,6 +229,7 @@
 
 
 </html>
+
 
 
 
