--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <!-- Controls: right after the logo -->
 <div class="nav-controls">
-    <a href="" target="_blank" class="btn-donate">
+    <a href="https://secure.psqimpact.com/donate/friends-of-jack-miller/mainsite" target="_blank" class="btn-donate">
         Donate
     </a>
 
@@ -180,7 +180,7 @@
             </a>
 
 <div class="nav-controls">
-    <a href="" target="_blank" class="btn-donate">
+    <a href="https://secure.psqimpact.com/donate/friends-of-jack-miller/mainsite" target="_blank" class="btn-donate">
         Donate
     </a>
 
@@ -229,6 +229,7 @@
 
 
 </html>
+
 
 
 
