--- a/index.html
+++ b/index.html
@@ -34,19 +34,13 @@
             </a>
 
             <!-- Controls: right after the logo -->
-<div class="nav-controls">
-    <a href="https://secure.psqimpact.com/donate/friends-of-jack-miller/mainsite" target="_blank" class="btn-donate">
-        Donate
-    </a>
-
-    <a href="https://www.facebook.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Facebook">
-        <i class="fab fa-facebook-f"></i>
-    </a>
-
-    <a href="https://www.instagram.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Instagram">
-        <i class="fab fa-instagram"></i>
-    </a>
-</div>
+            <div class="nav-controls">
+                <a href="https://secure.psqimpact.com/donate/friends-of-jack-miller/mainsite" target="_blank" class="btn-donate">Donate</a>
+                <a href="https://facebook.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Facebook"><i
+                        class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Instagram"><i
+                        class="fab fa-instagram"></i></a>
+            </div>
 
         </div>
     </nav>
@@ -116,7 +110,7 @@
 
             <div class="issue-item">
                 <i class="fas fa-circle-check issue-icon"></i>
-                <p class="issue-text">Protect our communities from overdevelopment and keep zoning decisions in the hands of our local officials</p>
+                <p class="issue-text">Keep zoning decisions in the hands of local officials</p>
             </div>
 
             <div class="issue-item">
@@ -179,27 +173,22 @@
                 <img src="images/Miller-Logo.png" alt="Jack Miller State House" class="logo-img">
             </a>
 
-<div class="nav-controls">
-    <a href="https://secure.psqimpact.com/donate/friends-of-jack-miller/mainsite" target="_blank" class="btn-donate">
-        Donate
-    </a>
-
-    <a href="https://www.facebook.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Facebook">
-        <i class="fab fa-facebook-f"></i>
-    </a>
-
-    <a href="https://www.instagram.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Instagram">
-        <i class="fab fa-instagram"></i>
-    </a>
-</div>
+            <!-- Controls: right after the logo -->
+            <div class="nav-controls">
+                <a href="https://secure.psqimpact.com/donate/friends-of-jack-miller/mainsite" target="_blank" class="btn-donate">Donate</a>
+                <a href="https://www.facebook.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Facebook"><i
+                        class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/JackMillerGA" target="_blank" class="nav-social" aria-label="Instagram"><i
+                        class="fab fa-instagram"></i></a>
+            </div>
 
         </div>
 
-        <p class="text-center text-muted m-2 mb-2">Paid for by Friends of Jack Miller</p>
+        <p class="text-center text-muted m-2 mb-2">Paid for by Jack Miller for State House</p>
     </footer>
 
 
-    <script id="ratufa_loader" src="https://www.ratufa.io/c/ld.js?f=g4dviiin&n=n1.ratufa.io"></script>
+    <script id="ratufa_loader" src="https://www.ratufa.io/c/ld.js?f=q1muop3d&n=n1.ratufa.io"></script>
 
     <style>
         .ratufa-overlay {
@@ -227,10 +216,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
-
 </html>
-
-
-
-
-
