--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <div class="issue-item">
                 <i class="fas fa-circle-check issue-icon"></i>
-                <p class="issue-text">Keep zoning decisions in the hands of local officials</p>
+                <p class="issue-text">Protect our communities from overdevelopment and keep zoning decisions in the hands of our local officials</p>
             </div>
 
             <div class="issue-item">
@@ -184,7 +184,7 @@
 
         </div>
 
-        <p class="text-center text-muted m-2 mb-2">Paid for by Jack Miller for State House</p>
+        <p class="text-center text-muted m-2 mb-2">Paid for by Friends of Jack Miller</p>
     </footer>
 
 
@@ -215,5 +215,6 @@
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
